--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,15 +3,19 @@
 * {
   font-family: 'Raleway', sans-serif;
   text-align: center;
+  margin: 0px;
 }
 
 /*Estilos del header */
+
+/*Direct style for nav tag*/
+
 nav{
   top: 0;
   left: 0;
   width: 100%;
-  height: 80px;
   color: #fff;
+  height: 80px;
   z-index: 1000;
   margin-top: 0;
   position: fixed;
@@ -20,33 +24,262 @@ nav{
   transition: all 0.6s cubic-bezier(0.7, 0.01, 0.3, 1);
 }
 
-.logo{
-  left: 0;
-  top: -4px;
-  width: 70px;
-  height: 74px;
-  padding: 0.4% 2%;
-  text-align: left;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-image: url(assets/img/laboratoria.svg);
-}
+/*Javascript style toggle for menu appear and desappear*/
 
 .header-in{
-  background-color: #F7B617;
+  background-color: rgba(247, 182, 23, 0.81);
 }
+
+/*Navgation general styles*/
+
+/*Background Menu*/
 
 nav .nav-background {
   top: 0px;
-  opacity: 0;
+  opacity:0;
   width: 100%;
   height: 100%;
   z-index: 1500;
   display: table;
   background: none;
   position: absolute;
-  transition: background-color 0.6s cubic-;
+  transition: background-color 0.6s cubic-bezier(0.7, 0.01, 0.3, 1);
+}
 
+nav.open .nav-background {
+  opacity: 1;
+  background-color: rgba(247, 182, 23, 0.81) !important;
+  transition: background-color 0.6s cubic-bezier(0.7, 0.01, 0.3, 1);
+}
+
+nav.open {
+  height: 100%;
+  transition: none;
+  -o-transition: none;
+  -moz-transition: none;
+  -webkit-transition: none;
+}
+
+/*Navigation list*/
+
+nav ul {
+  top: -10%;
+  padding: 0;
+  opacity: 0;
+  width: 100%;
+  text-align: center;
+  visibility: hidden;
+  display: table-cell;
+  vertical-align: middle;
+  transform: perspective(600px) rotateX(10deg);
+  transition: all 0.5s cubic-bezier(0.7, 0, 0.36, 0.63);
+}
+
+nav ul li{
+  visibility: hidden;
+}
+
+nav ul li a{
+  color:white;
+  width: 100%;
+  display: block;
+  padding: 8px 0 0;
+  letter-spacing: -0.06em;
+}
+
+nav ul li a:hover{
+  color:#f7b617;
+  background-color: white;
+}
+
+nav.open ul {
+  top: 0;
+  opacity: 1;
+  margin-top: 0;
+  visibility: visible;
+  transform: perspective(600px) rotateX(0deg);
+}
+
+nav.open ul li {
+  color:#fff;
+  font-size: 60px;
+  visibility: visible !important;
+}
+
+/*Menu bar logo and menu styles general*/
+
+/*Logo*/
+.logo,
+.menu{
+  position: absolute;
+  z-index: 2000;
+}
+
+.logo{
+  left:15px;
+  top:-4px;
+  width: 70px;
+  height: 74px;
+  padding: 0.4% 3%;
+  text-align: left;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-image: url(../img/icon/logo-laboratoria.svg);
+}
+
+.open .logo,
+nav.solid #logo .logo {
+  background-image: url(../img/icon/logo-laboratoria.svg);
+}
+
+.logo img{
+  z-index: 2000;
+}
+
+/*Hamburger*/
+.menu{
+  top:0;
+  right:0;
+  height: 4px;
+  width: 24px;
+  text-align:right;
+  margin: 2rem 2rem;
+  background: #f7b617;
+  transition: all 0.3s;
+}
+
+.menu:before{
+  top: -8px;
+}
+
+.menu:after{
+  top: 8px;
+}
+
+#toggle:hover:before {
+  top: -9px;
+}
+
+#toggle:hover:after {
+  top: 9px;
+}
+
+.menu:before,
+.menu:after{
+  content: '';
+  width: 24px;
+  height: 4px;
+  z-index: -1;
+  display: block;
+  position: absolute;
+  background: #f7b617;
+  transition: all 0.3s;
+}
+
+#toggle:hover {
+  transition: top 0.4s;
+}
+
+/*Javascript style toggle for menu appear and desappear style background*/
+.solid #toggle .menu {
+  background: #fff;
+}
+
+.solid #toggle .menu:after{
+  background-color: #fff;
+}
+
+.solid #toggle .menu:before{
+  background-color: #fff;
+}
+
+/*Javascript style toggle for menu hamburger appear and desappear*/
+.open .menu {
+  background: none !important;
+}
+
+.open .menu:after {
+  top: 0 !important;
+  background: #fff !important;
+  transform: rotate(45deg);
+}
+
+.open .menu:before {
+  top: 0 !important;
+  background: #fff !important;
+  transform: rotate(-45deg);
+}
+
+.header a.nounderline:link{  
+  text-decoration:none;  
+}
+
+/*Quita la línea al url - a*/
+
+a{
+  text-decoration: none;
+}
+
+.slider a{
+  color: #F7B617;
+}
+
+/* Estilos del slider*/
+
+.slider {
+  background: #2E2E2E;
+  color: #fff;
+  font-family: monospace;
+  padding-top: 300px;
+  display: flex;
+  justify-content: center;
+}
+
+/* DEMO-SPECIFIC STYLES */
+.slider h1 {
+  top: 50%;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: 4px solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .5px; /* Adjust as needed */
+  animation: 
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { 
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to {
+    border-color: transparent;
+  }
+
+  50% {
+    border-color: orange;
+  }
+}
+
+/*Estilos del section*/
+
+.caja-general h2{
+  color: #2E2E2E;
+}
+
+.caja-general h2{
+  display: block;
+  font-size: 35px;
+  font-weight: bold;
+  margin: 40px;
 }
 
 #caja-contenedor{
@@ -76,7 +309,6 @@ nav .nav-background {
 .contenedor > figcaption{
   position: absolute;
   top: 0px;
-  left: 0px;
   z-index: 0;
   margin: 0;
   opacity: 0;
@@ -87,8 +319,7 @@ nav .nav-background {
 
 .contenedor:hover > figcaption{
   opacity: 1;
-  top: 82px;
-  left: 82px;
+  top: 40%;
   z-index: 0;
   font-weight: bolder;
   font-size: 30px;
